--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -71,7 +71,7 @@ $font: (
 
 // Palette.
 $palette: (
-  bg: #242629,
+  bg: #ffffff,
   bg-alt: #1f2224,
   bg-overlay: transparentize(#242629, 0.75),
   bg-overlay-alt: transparentize(#242629, 0.5),
