--- a/src/assets/sass/components/_panel.scss
+++ b/src/assets/sass/components/_panel.scss
@@ -11,10 +11,10 @@
   @include vendor('transform', 'translateY(100vh)');
   @include vendor('transition', 'transform #{_duration(panel)} ease');
   -webkit-overflow-scrolling: touch;
-  background: transparentize(_palette(bg), 0.025);
-  bottom: _size(header);
+  background: _palette(fg);
+  bottom: 0;
   left: 0;
-  max-height: calc(80vh - #{_size(header)});
+  max-height: 800px;
   overflow-y: auto;
   position: fixed;
   width: 100%;
