--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -17,7 +17,7 @@ body {
   -ms-user-select: none;
   -webkit-user-select: none;
   background: _palette(bg-alt);
-  bottom: -1em;
+  top: 0;
   height: _size(header) + 1em;
   left: 0;
   line-height: _size(header);
@@ -39,7 +39,7 @@ body {
     display: inline-block;
     font-size: 1em;
     line-height: 1;
-    margin: 0;
+    margin: 0.5rem 0 0;
     vertical-align: middle;
 
     a {
@@ -55,7 +55,7 @@ body {
   nav {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 0.5em;
 
     > ul {
       list-style: none;
