fixes routing, adds pages, styling adjustments

--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -6,6 +6,12 @@
 
 /* Main */
 
+@include breakpoint('<=medium') {
+  #main {
+    padding-top: 2rem;
+  }
+}
+
 #main {
   @include vendor(
     'transition',
@@ -19,7 +25,8 @@
   @include vendor('display', 'flex');
   @include vendor('flex-wrap', 'wrap');
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  padding-top: 5rem;
+  padding-top: 6rem;
+  padding-left: 2rem;
 
   .container.box {
     margin: 2em;
@@ -135,7 +142,7 @@
       @include vendor('transition-delay', '#{$defaultDelay}');
       height: calc(#{100vh / ($rows + $pad)} - #{_size(header) / $rows});
       min-height: $minHeight;
-      width: (96% / $columns);
+      width: (94% / $columns);
 
       @for $i from 1 through (($rows * $columns) * 1.5) {
         &:nth-child(#{$i}) {
