--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -1,18 +1,8 @@
-///
-/// Multiverse by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
-
-/* Header */
-
 body {
   padding: 0 0 _size(header) 0;
 }
 
 #header {
-  @include vendor('transform', 'translateY(0)');
-  @include vendor('transition', 'transform #{_duration(header)} ease');
   -moz-user-select: none;
   -ms-user-select: none;
   -webkit-user-select: none;
@@ -27,15 +17,8 @@ body {
   width: 100%;
   z-index: _misc(z-index-base) + 2;
 
-  body.is-preload & {
-    @include vendor('transform', 'translateY(#{_size(header)})');
-  }
-  .main-body.is-preload & {
-    @include vendor('transform', 'translateY(#{_size(header)})');
-  }
-
   h1 {
-    color: _palette(fg);
+    color: _palette(fg-light);
     display: inline-block;
     font-size: 1em;
     line-height: 1;
@@ -44,7 +27,6 @@ body {
 
     a {
       border: 0;
-      color: inherit;
 
       &:hover {
         color: inherit !important;
@@ -72,7 +54,7 @@ body {
             'background-color #{_duration(panel)} ease'
           );
           border: 0;
-          color: _palette(fg-bold);
+          color: _palette(fg-light);
           display: inline-block;
           letter-spacing: _font(kerning-alt);
           padding: 0 1.65em;
@@ -87,7 +69,7 @@ body {
           }
 
           &:hover {
-            color: _palette(fg-bold) !important;
+            color: _palette(fg-light) !important;
           }
 
           &.active {
@@ -110,14 +92,6 @@ body {
     height: _size(header);
     padding: 0 1em;
     top: 0;
-
-    body.is-preload & {
-      @include vendor('transform', 'translateY(#{_size(header) * -0.85})');
-    }
-
-    .main-body.is-preload & {
-      @include vendor('transform', 'translateY(#{_size(header) * -0.85})');
-    }
 
     h1 {
       font-size: 0.9em;
