--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -78,9 +78,9 @@ $palette: (
   bg-ie-overlay: transparentize(#242629, 0.45),
   bg-ie-overlay-alt: transparentize(#242629, 0.2),
   fg: #a0a0a1,
-  fg-bold: #ffffff,
+  fg-bold: #222222,
   fg-medium: #707071,
-  fg-light: #505051,
+  fg-light: #ffffff,
   border: #36383c,
   border-bg: #34363b,
   border-bg-alt: #44464b,
