--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -78,6 +78,8 @@
       margin: 0;
       position: absolute;
       z-index: 1;
+      background: _palette(bg);
+      padding: 0.25rem 0.5rem;
     }
 
     > p {
