adds original tag and more scss clenaup

--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -77,9 +77,9 @@ $palette: (
   bg-overlay-alt: transparentize(#242629, 0.5),
   bg-ie-overlay: transparentize(#242629, 0.45),
   bg-ie-overlay-alt: transparentize(#242629, 0.2),
-  fg: #a0a0a1,
+  fg: #333333,
   fg-bold: #222222,
-  fg-medium: #707071,
+  fg-medium: #444444,
   fg-light: #ffffff,
   border: #36383c,
   border-bg: #34363b,
