--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -12,7 +12,7 @@ select,
 textarea {
   color: _palette(fg);
   font-family: _font(family);
-  font-size: 15pt;
+  font-size: 1.25rem;
   font-weight: _font(weight);
   letter-spacing: _font(kerning);
   line-height: 1.65;
