--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -1,18 +1,13 @@
-///
-/// Multiverse by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
-
 /* Footer */
 
-	#footer {
-		.copyright {
-			color: _palette(fg-light);
-			font-size: 0.9em;
+#footer {
+  color: _palette(fg-light);
 
-			a {
-				color: inherit;
-			}
-		}
-	}
+  h2 {
+    color: inherit;
+  }
+
+  a {
+    color: inherit;
+  }
+}
