--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -26,7 +26,7 @@
   @include vendor('flex-wrap', 'wrap');
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   padding-top: 6rem;
-  padding-left: 2rem;
+  padding-left: 1rem;
 
   .container.box {
     margin: 2em;
@@ -73,7 +73,6 @@
     > h2 {
       @include vendor('pointer-events', 'none');
       bottom: (1.5em / 0.8);
-      font-size: 0.8em;
       left: (1.75em / 0.8);
       margin: 0;
       position: absolute;
@@ -84,6 +83,17 @@
 
     > p {
       display: none;
+    }
+
+    > .original-tag {
+      background-color: lime;
+      transform: rotateY(45deg);
+      font-size: 1rem;
+      position: absolute;
+      width: 20%;
+      top: 0;
+      right: 0;
+      text-align: center;
     }
   }
 
@@ -144,7 +154,7 @@
       @include vendor('transition-delay', '#{$defaultDelay}');
       height: calc(#{100vh / ($rows + $pad)} - #{_size(header) / $rows});
       min-height: $minHeight;
-      width: (94% / $columns);
+      width: (95% / $columns);
 
       @for $i from 1 through (($rows * $columns) * 1.5) {
         &:nth-child(#{$i}) {
