--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -8,37 +8,10 @@
 
 form {
   margin: 0 0 _size(element-margin) 0;
+  max-width: 30rem;
 
-  > :last-child {
-    margin-bottom: 0;
-  }
-
-  > .fields {
-    $gutter: (_size(element-margin) * 0.75);
-
-    @include vendor('display', 'flex');
-    @include vendor('flex-wrap', 'wrap');
-    width: calc(100% + #{$gutter * 2});
-    margin: ($gutter * -1) 0 _size(element-margin) ($gutter * -1);
-
-    > .field {
-      @include vendor('flex-grow', '0');
-      @include vendor('flex-shrink', '0');
-      padding: $gutter 0 0 $gutter;
-      width: calc(100% - #{$gutter * 1});
-
-      &.half {
-        width: calc(50% - #{$gutter * 0.5});
-      }
-
-      &.third {
-        width: calc(#{100% / 3} - #{$gutter * (1 / 3)});
-      }
-
-      &.quarter {
-        width: calc(25% - #{$gutter * 0.25});
-      }
-    }
+  label {
+    color: _palette(fg-light);
   }
 
   @include breakpoint('<=small') {
