--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -84,5 +84,6 @@ $palette: (
   border: #36383c,
   border-bg: #34363b,
   border-bg-alt: #44464b,
-  accent1: #34a58e,
+  accent1: #00ffb3,
+  accent2: #00a070,
 );
