--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -1,11 +1,3 @@
-///
-/// Multiverse by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
-
-/* Type */
-
 body,
 input,
 select,
@@ -23,21 +15,7 @@ textarea {
 }
 
 a {
-  @include vendor(
-    'transition',
-    (
-      'color #{_duration(transition)} ease-in-out',
-      'border-bottom-color #{_duration(transition)} ease-in-out'
-    )
-  );
-  border-bottom: dotted 1px;
-  color: _palette(accent1);
   text-decoration: none;
-
-  &:hover {
-    border-bottom-color: transparent;
-    color: _palette(accent1) !important;
-  }
 }
 
 strong,
@@ -182,4 +160,8 @@ hr {
 
 .align-right {
   text-align: right;
+}
+
+.large-p {
+  font-size: 1.25rem;
 }
