improves styles in shopping cart and updates color names

--- a/src/assets/sass/components/_checkout.scss
+++ b/src/assets/sass/components/_checkout.scss
@@ -2,7 +2,7 @@
   background-color: _palette(accent1);
 
   &:hover {
-    color: _palette(fg-bold);
+    color: _palette(bold);
     background-color: _palette(accent2);
     box-shadow: none;
   }
