--- a/src/assets/sass/components/_order-form.scss
+++ b/src/assets/sass/components/_order-form.scss
@@ -6,11 +6,11 @@
   h3,
   p {
     text-align: center;
-    color: _palette(fg-medium);
+    color: _palette(medium);
   }
 
   label {
-    color: _palette(fg-medium);
+    color: _palette(medium);
   }
 
   input,
