--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -38,7 +38,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: _palette(fg-bold);
+  color: _palette(bold);
   font-weight: _font(weight-bold);
   letter-spacing: _font(kerning-alt);
   line-height: 1.5;
