--- a/src/assets/sass/components/_button.scss
+++ b/src/assets/sass/components/_button.scss
@@ -5,7 +5,7 @@ button,
 .button {
   background-color: transparent;
   border: 0;
-  color: _palette(fg-bold);
+  color: _palette(bold);
   cursor: pointer;
   font-size: 1.25rem;
   font-weight: _font(weight-bold);
@@ -44,7 +44,7 @@ button,
 
     &:hover {
       background-color: lighten(_palette(accent1), 10);
-      color: _palette(fg-bold) !important;
+      color: _palette(bold) !important;
 
       &:active {
         background-color: darken(_palette(accent1), 10);
