--- a/src/assets/sass/components/_cartItem.scss
+++ b/src/assets/sass/components/_cartItem.scss
@@ -12,15 +12,15 @@ td.quan {
       align-items: center;
 
       .quan-button {
-        width: 0.75rem;
-        height: 0.75rem;
-        border-radius: 50%;
-        line-height: 1rem;
-        padding: 1rem;
-        margin: 0 1rem;
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 1.5rem;
+        height: 1.5rem;
+        padding: 0.25rem;
+        border-radius: 50%;
+        margin: 0 1rem;
+        background-color: _palette(medium-light);
 
         &:hover {
           background-color: _palette(accent1);
