--- a/src/assets/sass/components/_gallery.scss
+++ b/src/assets/sass/components/_gallery.scss
@@ -67,7 +67,7 @@
 
     &:hover {
       box-shadow: inset 0 0 20px #cfc20c;
-      color: _palette(fg-bold) !important;
+      color: _palette(bold) !important;
     }
   }
 }
