--- a/src/assets/sass/layout/_cart.scss
+++ b/src/assets/sass/layout/_cart.scss
@@ -3,6 +3,11 @@
   display: flex;
   flex-direction: column;
 
+  .cart-inner {
+    box-shadow: 2px 2px 8px 8px #cccccc;
+    padding: 1rem;
+  }
+
   table {
     margin-bottom: 2rem;
   }
@@ -11,7 +16,7 @@
   td {
     vertical-align: middle;
     text-align: center;
-    border: 1px solid gray;
+    border-bottom: 1px solid gray;
     padding: 1rem;
   }
 
