adds workign shopping cart

--- a/src/assets/sass/components/_add-to-cart.scss
+++ b/src/assets/sass/components/_add-to-cart.scss
@@ -13,7 +13,8 @@
   right: 1rem;
   z-index: 1;
 
-  &:hover {
-    box-shadow: inset 0 0 20px _palette(accent2);
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 20px _palette(accent2);
   }
 }
