--- a/src/assets/sass/layout/_cart.scss
+++ b/src/assets/sass/layout/_cart.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
 
   .cart-inner {
-    box-shadow: 2px 2px 8px 8px #cccccc;
+    box-shadow: 0 0 10px #ccc;
     padding: 1rem;
   }
 
