--- a/src/assets/sass/layout/index.scss
+++ b/src/assets/sass/layout/index.scss
@@ -3,3 +3,5 @@
 @import 'layout/main';
 @import 'layout/footer';
 @import 'layout/cart';
+@import 'layout/checkout_success';
+@import 'layout/thank-you';
