--- a/src/assets/sass/components/_order-form.scss
+++ b/src/assets/sass/components/_order-form.scss
@@ -1,6 +1,20 @@
 .order-form {
-  border: 1px solid purple;
+  // border: 1px solid #ddd;
+  box-shadow: 0 0 10px #ccc;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  form {
+    width: 100%;
+  }
+
+  em {
+    color: red;
+    font-weight: 700;
+    font-size: 1.25em;
+  }
 
   > h2,
   h3,
@@ -15,6 +29,6 @@
 
   input,
   textarea {
-    border: 1px solid purple;
+    border: 1px solid #ccc;
   }
 }
