--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -10,6 +10,7 @@
 @import 'components/actions';
 @import 'components/icons';
 @import 'components/order-form';
+@import 'components/original-tag';
 @import 'components/panel';
 @import 'components/poptrox-popup';
 @import 'components/shipping-and-total';
