--- a/src/assets/sass/components/_cartItem.scss
+++ b/src/assets/sass/components/_cartItem.scss
@@ -2,7 +2,7 @@ td.quan {
   > div {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: 8rem;
 
