--- a/src/assets/sass/components/_order-form.scss
+++ b/src/assets/sass/components/_order-form.scss
@@ -1,6 +1,5 @@
 .order-form {
-  // border: 1px solid #ddd;
-  box-shadow: 0 0 10px #ccc;
+  border-top: 1px solid gray;
   padding: 2rem;
   display: flex;
   flex-direction: column;
