--- a/src/assets/sass/layout/_cart.scss
+++ b/src/assets/sass/layout/_cart.scss
@@ -1,11 +1,24 @@
 .cart {
   margin: 0 auto;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
+
+  h1 {
+    align-self: center;
+  }
+
+  @media screen and (min-width: 40rem) {
+    padding: 2rem;
+  }
 
   .cart-inner {
     box-shadow: 0 0 10px #ccc;
     padding: 1rem;
+
+    @media screen and (max-width: 640px) {
+      width: 100%;
+    }
   }
 
   table {
