--- a/src/assets/sass/layout/_thank-you.scss
+++ b/src/assets/sass/layout/_thank-you.scss
@@ -1,8 +1,8 @@
 .thank-you {
-  width: 100%;
-  margin-top: 10%;
+  margin-top: 10rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
