--- a/src/assets/sass/components/_original-tag.scss
+++ b/src/assets/sass/components/_original-tag.scss
@@ -5,12 +5,13 @@
   text-transform: uppercase;
   line-height: 1rem;
   position: absolute;
-  width: 20%;
+  width: 8rem;
   top: 0;
   right: 1rem;
   text-align: center;
   box-shadow: 1px 1px 10px #222;
   height: 3rem;
+  z-index: 2;
   cursor: help;
 
   p:first-of-type {
