--- a/src/assets/sass/layout/_header.scss
+++ b/src/assets/sass/layout/_header.scss
@@ -26,7 +26,7 @@ body {
     vertical-align: middle;
 
     @media screen and (max-width: 640px) {
-      width: 100px;
+      width: 80px;
     }
 
     a {
@@ -59,7 +59,8 @@ body {
           margin: 0 1.5em;
           text-transform: uppercase;
 
-          &:hover {
+          &:hover,
+          &:focus {
             border-bottom: 4px solid _palette(accent1);
           }
 
@@ -90,10 +91,12 @@ body {
 
     nav {
       > ul {
+        margin-right: 0.5rem;
         > li {
           a {
             font-size: 0.9em;
-            padding: 0 1.15em;
+            margin: 0 0.5rem;
+            padding: 0;
           }
         }
       }
