--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -1,132 +1,7 @@
 #main {
-  @include vendor('display', 'flex');
-  @include vendor('flex-wrap', 'wrap');
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  padding-top: 0;
 
   @media screen and (min-width: 640px) {
     padding-top: 8rem;
-    padding-left: 2rem;
-  }
-
-  .container.box {
-    margin: 2em;
-  }
-
-  &:after {
-    @include vendor('pointer-events', 'none');
-    @include vendor(
-      'transition',
-      ('opacity #{_duration(panel)} ease', 'visibility #{_duration(panel)}')
-    );
-    background: _palette(bg-overlay);
-    content: '';
-    display: block;
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    width: 100%;
-    z-index: 1;
-
-    body.ie & {
-      background: _palette(bg-ie-overlay);
-    }
-  }
-
-  body.content-active &,
-  .main-body.content-active & {
-    @include vendor('filter', 'blur(6px)');
-
-    &:after {
-      @include vendor('pointer-events', 'auto');
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-
-  body.is-preload & {
-    .gallery {
-      @include vendor('pointer-events', 'none');
-      opacity: 0;
-    }
-  }
-
-  .main-body.is-preload & {
-    .gallery {
-      @include vendor('pointer-events', 'none');
-      opacity: 0;
-    }
-  }
-
-  @mixin gallery($rows, $columns, $pad, $minHeight) {
-    $baseDelay: _duration(header) - 0.5;
-    $defaultDelay: $baseDelay +
-      (((($rows * $columns) + 1) * 1.5) * _duration(thumb));
-
-    .gallery {
-      @include vendor('transition-delay', '#{$defaultDelay}');
-      height: calc(#{100vh / ($rows + $pad)} - #{_size(header) / $rows});
-      min-height: $minHeight;
-      width: (95% / $columns);
-
-      @for $i from 1 through (($rows * $columns) * 1.5) {
-        &:nth-child(#{$i}) {
-          @include vendor(
-            'transition-delay',
-            '#{$baseDelay + ($i * _duration(thumb))}'
-          );
-        }
-      }
-    }
-  }
-
-  // Default.
-  @include gallery(
-    _misc(main-layout, default, rows),
-    _misc(main-layout, default, columns),
-    _misc(main-layout, default, pad),
-    _misc(main-layout, default, minHeight)
-  );
-
-  // XLarge.
-  @include breakpoint('<=xlarge') {
-    @include gallery(
-      _misc(main-layout, xlarge, rows),
-      _misc(main-layout, xlarge, columns),
-      _misc(main-layout, xlarge, pad),
-      _misc(main-layout, xlarge, minHeight)
-    );
-  }
-
-  // Large.
-  @include breakpoint('<=large') {
-    @include gallery(
-      _misc(main-layout, large, rows),
-      _misc(main-layout, large, columns),
-      _misc(main-layout, large, pad),
-      _misc(main-layout, large, minHeight)
-    );
-  }
-
-  // Medium.
-  @include breakpoint('<=medium') {
-    @include gallery(
-      _misc(main-layout, medium, rows),
-      _misc(main-layout, medium, columns),
-      _misc(main-layout, medium, pad),
-      _misc(main-layout, medium, minHeight)
-    );
-  }
-
-  // XSmall.
-  @include breakpoint('<=xsmall') {
-    @include gallery(
-      _misc(main-layout, xsmall, rows),
-      _misc(main-layout, xsmall, columns),
-      _misc(main-layout, xsmall, pad),
-      _misc(main-layout, xsmall, minHeight)
-    );
   }
 }
