--- a/src/assets/sass/components/index.scss
+++ b/src/assets/sass/components/index.scss
@@ -1,5 +1,6 @@
 @import 'components/add-to-cart';
 @import 'components/badge';
+@import 'components/banner';
 @import 'components/button';
 @import 'components/cartItem';
 @import 'components/form';
