--- a/src/assets/sass/components/_button.scss
+++ b/src/assets/sass/components/_button.scss
@@ -18,8 +18,10 @@ button,
   text-transform: uppercase;
   white-space: nowrap;
 
-  &:hover {
-    box-shadow: inset 0 0 0 2px _palette(accent1);
+  span {
+    &:hover {
+      box-shadow: inset 0 0 0 2px _palette(accent1);
+    }
   }
 
   &.fit {
